--- a/app/styles/core/base.scss
+++ b/app/styles/core/base.scss
@@ -125,6 +125,7 @@ tg-svg {
 
 .main {
     flex: 1;
+    min-width: 0;
     padding: 1rem;
 }
 
